--- a/la-mia-pizzeria-static/la-mia-pizzeria-post.csproj
+++ b/la-mia-pizzeria-static/la-mia-pizzeria-post.csproj
@@ -7,4 +7,12 @@
     <RootNamespace>la_mia_pizzeria_post</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.9" />
+  </ItemGroup>
+
 </Project>
